src/test/ui/impl-trait/recursive-type-alias-impl-trait-declaration-too-subtle.stderr
error: unconstrained opaque type
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle.rs:4:16
   |
LL |     type Foo = impl PartialEq<(Foo, i32)>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: unconstrained opaque type
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle.rs:17:16
   |
LL |     type Foo = impl PartialEq<(Foo, i32)>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: aborting due to 2 previous errors

